--- a/admin/produtos.html
+++ b/admin/produtos.html
@@ -17,14 +17,14 @@
   <div class="container">
     <div class="row">
       <div class="col-12 col-md-6 col-sm-12">
-        <h2 class="title-logo">Sistema de Ordem de serviços</h2>
+        <h2 class="navbar-brand">Sistema de Ordem de serviços</h2>
       </div>
       <div class="col-12 col-md-6 col-sm-12 text-right">
         <nav>
           <ul class="flex end">
-            <li><a href="">Clientes</a></li>
-            <li><a href="">Produtos</a></li>
-            <li><a href="">Ordem de Serviços</a></li>
+            <li><a href="clientes.html">Clientes</a></li>
+            <li><a href="produtos.html">Produtos</a></li>
+            <li><a href="ordem-servico.html">Ordem de Serviços</a></li>
           </ul>
         </nav>
       </div>
